<resources>
    <string name="app_name">Autenticação Biométrica</string>
    <string name="ministerio_do_meio_ambiente">Ministério do Meio Ambiente</string>
    <string name="register_fingerprint">Cadastrar Digital</string>
    <string name="login">Entrar</string>
    <string name="retake">Tirar outra foto</string>
    <string name="confirm">Confirmar</string>
    <string name="process">Processar</string>
    <string name="register">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="name">Nome</string>
    <string name="open">abrir</string>
    <string name="close">fechar</string>

    <string name="agricultural_producer">Produres Agrícolas</string>
    <string name="tax_information">Informações Fiscais</string>
    <string name="pesticides">Agrotóxicos</string>
</resources>