<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FingerprintFragment">

    <ImageView
        android:id="@+id/iv_fingerprint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_processing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/iv_fingerprint"
        app:layout_constraintEnd_toEndOf="@id/iv_fingerprint"
        app:layout_constraintStart_toStartOf="@id/iv_fingerprint"
        app:layout_constraintTop_toTopOf="@id/iv_fingerprint"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_retake"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/retake"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_process"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_process"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/process"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_retake" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_retake"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>